--- a/home.html
+++ b/home.html
@@ -55,76 +55,76 @@
     <section class="main__section-heros">
         <h2 class="main__section-heros--title">Nos Supers Héros</h2>
         <article class="main__section-heros--article">
-            <img src="./ressources/images/catastrophic.png" alt="Heros League cat astrophic">
-            <h4>Cat Astrophic</h4>
-            <p>Avec son super ronron, il saura vous réconforter dans n'importe quelle situation.</p>
+            <img class="main__section-heros--article-img" src="./ressources/images/catastrophic.png" alt="Heros League cat astrophic">
+            <h4 class="main__section-heros--article-name">Cat Astrophic</h4>
+            <p class="main__section-heros--article-p">Avec son super ronron, il saura vous réconforter dans n'importe quelle situation.</p>
         </article>
         <article class="main__section-heros--article">
-            <img src="./ressources/images/carotte-woman.png" alt="Heros League carotte-woman">
-            <h4>Carotte Woman</h4>
-            <p>Mis à part son apparence de carotte, on ne sait pas bien à quoi elle est forte, mais on va trouver.</p>
+            <img class="main__section-heros--article-img"src="./ressources/images/carotte-woman.png" alt="Heros League carotte-woman">
+            <h4 class="main__section-heros--article-name">Carotte Woman</h4>
+            <p class="main__section-heros--article-p">Mis à part son apparence de carotte, on ne sait pas bien à quoi elle est forte, mais on va trouver.</p>
         </article>
         <article class="main__section-heros--article">
-            <img src="./ressources/images/ultraquenarde.png" alt="Heros League ultraquenarde">
-            <h4>Peut vous sortir de n'importe quel traquenard.</h4>
-            <p>Vous sort du traquenard… Mais il arrive qu'elle vous entraîne dans un autre.</p>
+            <img class="main__section-heros--article-img" src="./ressources/images/ultraquenarde.png" alt="Heros League ultraquenarde">
+            <h4 class="main__section-heros--article-name">Peut vous sortir de n'importe quel traquenard.</h4>
+            <p class="main__section-heros--article-p">Vous sort du traquenard… Mais il arrive qu'elle vous entraîne dans un autre.</p>
         </article>
         <article class="main__section-heros--article">
-            <img src="./ressources/images/poulpy.png" alt="Heros League poulpy">
-            <h4>Poulpy</h4>
-            <p>Il a des tentacules gigantesques, super pratique pour les déménagements.</p>
+            <img class="main__section-heros--article-img" src="./ressources/images/poulpy.png" alt="Heros League poulpy">
+            <h4 class="main__section-heros--article-name">Poulpy</h4>
+            <p class="main__section-heros--article-p">Il a des tentacules gigantesques, super pratique pour les déménagements.</p>
         </article>
         <article class="main__section-heros--article">
-            <img src="./ressources/images/oran-wu-tang-clan.png" alt="Heros League oran-wu-tang-clan">
-            <h4>Orang Wu-Tang Clan</h4>
-            <p>Un gros singe agile, multi-tâche, qui intervient tout en rappant.</p>
+            <img class="main__section-heros--article-img" src="./ressources/images/oran-wu-tang-clan.png" alt="Heros League oran-wu-tang-clan">
+            <h4 class="main__section-heros--article-name">Orang Wu-Tang Clan</h4>
+            <p class="main__section-heros--article-p">Un gros singe agile, multi-tâche, qui intervient tout en rappant.</p>
         </article>
         <article class="main__section-heros--article"> 
-            <img src="./ressources/images/superime.png" alt="Heros League superime">
-            <h4>Superimé</h4>
-            <p>Un feu super-héro qui ne veut pas partir à la retraite.</p>
+            <img class="main__section-heros--article-img" src="./ressources/images/superime.png" alt="Heros League superime">
+            <h4 class="main__section-heros--article-name">Superimé</h4>
+            <p class="main__section-heros--article-p">Un feu super-héro qui ne veut pas partir à la retraite.</p>
         </article>
-        <button>Tous nos héros</button>
+        <button class="main__section-heros--button">Tous nos héros</button>
     </section>
-    <section>
-        <h3>Les Témoignages de nos clients</h3>
-        <article>
-            <img src="./ressources/images/testimony-1.png" alt="">
-            <h4>Tombédeu O.</h4>
-            <p>"Grâce à Heros League, j'ai pu déménager super rapidement. Attention à l'odeur laissée par les tentacules ceci-dit. Merci Poulpy !"</p>
+    <section class="section__clients">
+        <h3 class="section__clients--title">Les Témoignages de nos clients</h3>
+        <article class="section__clients--article">
+            <img class="section__clients--img" src="./ressources/images/testimony-1.png" alt="">
+            <h4 class="section__clients--name">Tombédeu O.</h4>
+            <p class="section__clients--p">"Grâce à Heros League, j'ai pu déménager super rapidement. Attention à l'odeur laissée par les tentacules ceci-dit. Merci Poulpy !"</p>
         </article>
          <article>
-            <img src="./ressources/images/testimony-2.png" alt="">
-            <h4>Jella N.</h4>
+            <img class="section__clients--img" src="./ressources/images/testimony-2.png" alt="">
+            <h4 class="section__clients--name">Jella N.</h4>
             <p>"Ultraquenarde m'a sauvé la vie ! J'allais tout perdre et sur ses conseils j'ai investi dans les bitcoins, affaire à suivre !"</p>
         </article>
-         <article>
-            <img src="./ressources/images/testimony-3.png" alt="">
-            <h4>Bob O.</h4>
-            <p>"Je ne remercierai jamais assez Carotte Woman d'avoir retrouvé mon chat. 
+         <article class="section__clients--article">
+            <img class="section__clients--img" src="./ressources/images/testimony-3.png" alt="">
+            <h4 class="section__clients--name">Bob O.</h4>
+            <p class="section__clients--p">"Je ne remercierai jamais assez Carotte Woman d'avoir retrouvé mon chat. 
                 Apparemment c'est normal si il est orange et plus noir, elle l'aurait retrouvé dans un produit chimique spécial. Je la crois sur parole !"</p>
         </article>
-         <article>
-            <img src="./ressources/images/testimony-4.png" alt="">
-            <h4>Coupéhala H.</h4>
-            <p>"Supervif a été super, il m'a sortie des bouchons et amenée au travail en un temps record. 
+         <article class="section__clients--article">
+            <img class="section__clients--img" src="./ressources/images/testimony-4.png" alt="">
+            <h4 class="section__clients--name">Coupéhala H.</h4>
+            <p class="section__clients--p">"Supervif a été super, il m'a sortie des bouchons et amenée au travail en un temps record. 
                 Par contre j'aimerais bien retrouver ma voiture maintenant."</p>
         </article>
     </section>
-    <form action="#">
-        <fieldset>
-            <legend>Sauvez-moi !</legend>
+    <form class="main__section--formulaire" action="#">
+        <fieldset class="section__formualire">
+            <legend class="section__formualire--title" cl>Sauvez-moi !</legend>
             <input type="text" id="NAME">
             <label for="name">Nom</label>
             <input type="text" id="mail">
             <label for="mail">Email</label>
             <label for="service">Service</label>
             <select name="service" id="service">
-            <option value="">Super Déménagement </option>
-            <option value="">Livraison de Repas</option>
-            <option value="">Z'héro Bouchons</option>
-            <option value="">Sauvetage de soirée</option>
-            <option value="">Moral à Z'héro</option>
+            <option value="service">Super Déménagement </option>
+            <option value="service">Livraison de Repas</option>
+            <option value="service">Z'héro Bouchons</option>
+            <option value="service">Sauvetage de soirée</option>
+            <option value="service">Moral à Z'héro</option>
             </select>
             <input type="textarea" id="message">
             <label for="message">Message</label>
@@ -132,8 +132,8 @@
         </fieldset>
     </form>
     </main>
-    <footer>
-<h1>Heros League</h1>
+    <footer class="footer__home">
+<h1 class="footer__home--title">Heros League</h1>
 <a href="Accueil"></a>
 <a href="Nos Héros"></a>
 <a href="Témoignages"></a>
