--- a/home.html
+++ b/home.html
@@ -8,13 +8,17 @@
     <title>Heros League</title>
 </head>
 <body>
-    <h1 class="home__title">Heros League</h1>
-    <header>
+    <div class="site__title"><h1 class="home__title">Heros League</h1>
+    </div>
+    
+    <header class="header__home">
+        <img class="header__title-img" src="./ressources/images/hero-banner.png" alt="Les Heros de Heros League">
+        <div class="header__title-div">
         <h1 class="header__title">Heros League</h1>
         <p class="header__title-paragraph"> Des gens un peu spéciaux, pour des problèmes pas tout à fait normaux</p>
-        <img class="header__title-img" src="./ressources/images/hero-banner.png" alt="Les Heros de Heros League">
+        </div>
     </header>
-    <main>
+    <main class="main__home">
     <section class="main__section-service">
         <h2 class="main__section-service--title">Nos supers Services</h2>
         <article class="main__section-service--article">
