--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </section>
     <main class="main__home">
         <section id="services" class="main__section-service">
-            <h2 class="main__section-service--title">Nos <span class="text-gradient">supers</span> services</h2>
+            <h2 class="main__section-service--title">Nos <span class="text-gradient">supers</span> Services</h2>
             <div class="main__section-service--cards">
                 <article class="main__section-service--article">
                     <h3 class="main__section-service--article-title">Super Déménagement</h3>
